# Hogwarts-Legacy-xbox_to_epic_save

./: .gitignore  CMakeLists.txt  README.md
src/: HL_save_converter.cpp  HL_save_utils.cpp  HL_save_utils.h
